deleted unused link-profile endpoint
